[package]
name = "popcnt"
version = "0.1.0"
edition = "2021"
authors = ["sarah <>"]
description = "count number of set bits in a byte slice"
readme = "README.md"
repository = "https://github.com/sarah-ek/popcnt/"
license = "MIT"
keywords = ["popcnt", "count_ones"]

[dependencies]
bytemuck = "1.15.0"
pulp = { version = "0.18.9", default_features = false }

[features]
default = ["std"]
std = ["pulp/std"]
nightly = ["pulp/nightly"]

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

